@@ -608,4 +608,9 @@
           msLayerClose(self);
         return msConnectLayer(self, connectiontype, library_str);
     }
+
+    int getClassIndex(shapeObj *shape, double scaledenom, int *classgroup=NULL, int numclasses=0) {
+        return msShapeGetClass(self, shape, scaledenom, classgroup, numclasses);
+    }
+
 }
