@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Fixed MapScript shape->classindex is always 0 (#3406)
+
 - Fixed PHP MapScript integer passing broken on 64bit systems (#3412)
 
 - Fix MS_NONSQUARE to work in mode=map (#3413)
